@@ -31,68 +31,24 @@ jar
 names
 lib
 
+
 #
-# scilab/ specific files
+# windows files
 #
-thirdparty
-Makefile.OBJ
-Makefile.incl
-Makemex
-Path.incl
-config.log
-config.status
-libtool
-Scilab.suo
-Scilab.ncb
-history.scilab
-lib
-tcllib
+
+#
+# Innosetup files (Windows)
+#
 Scilab.iss
 ScilabLogo.bmp
 ScilabLogoSmall.bmp
 scilab.ico
 French.isl
 English.isl
-language
-Autorun.exe
-Autorun.ilk
-Output
 puffin.ico
-man
-tests
-Chinese.isl
-*.bak
-_tmp_project.h
-_UpgradeReport_Files
-UpgradeLog2.XML
-Java
-*.suo
-*.ncb
-pvm3
-demos
-*.db
-Release
-Scilab.sln_old
 base.iss
-scilab-bin
-tclmajor
-tclminor
-.libs
-mainsci.o
-licence.txt
-*.log
-java
-.metadata
-autom4te.cache
-.deps
-locales
-locale
-Scilabcache.dat
-Scilab_f2ccache.dat
-*.dat
+Output
 atlas.iss
-scilab-lib.properties
-Debug
 code.iss
 components.iss
 files.iss
@@ -105,8 +61,59 @@ setup.iss
 tasks.iss
 types.iss
 uninstalldelete.iss
-scilab-lib-doc.properties
-scilab.pc
+#
+# VS solution files (windows)
+#
+Scilab.sln_old
 *.lib
 *.exp
 *.vcdef
+Scilab.suo
+Scilab.ncb
+Release
+Debug
+*.icproj
+*.user
+*.u2d
+*.suo
+*.ncb
+#
+# others files (windows)
+#
+*.db
+*.bak
+
+#
+# scilab/ specific files
+#
+
+thirdparty
+Makefile.OBJ
+Makefile.incl
+Makemex
+Path.incl
+config.log
+config.status
+libtool
+history.scilab
+lib
+tcllib
+_tmp_project.h
+scilab-bin
+tclmajor
+tclminor
+.libs
+mainsci.o
+*.log
+java
+.metadata
+autom4te.cache
+.deps
+locale
+*.dat
+scilab-lib.properties
+scilab-lib-doc.properties
+scilab.pc
+pvm3
+*.class
+*.dia
