@@ -98,3 +98,5 @@ Bug fixes:
 * bug 3661 fixed - cotg and coth do not work.
 
 * bug 3624, 3640 fixed - Atlas 3.8.0 have a bug causing wrong answer for row-major gemm C=A*A' or A'A 
+
+* bug 3673 fixed - When using Scilab embedded in a Java application through javasci, the first call to javasci API reset the look and feel of the Java application.
